Fixed error with home page image 	- The SVG image that's used as a visible section divider doesn't appear in all browsers. This was due to a styling issue that has been fixed.

--- a/src/views/home/index.scss
+++ b/src/views/home/index.scss
@@ -25,11 +25,10 @@
   }
 
   .section-three-divider {
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
-
     svg {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
       max-width: 5rem;
 
       .shape-fill {
